--- a/publications.html
+++ b/publications.html
@@ -132,6 +132,7 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; X. Mou, R. Wang, T. Wang, R. Yang*, S. Chen, J. Sun, T. Wo, X. Liu. CAPMix: Robust Time Series Anomaly Detection Based on Abnormal Assumptions with Dual-Space Mixup. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.06419"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
 
+<p><span class="style11">&bull; X. Sun, W. Zhang, H. He, R. Yang. A Survey on Differentially Private Methods for Trajectory Data. Journal of Network and Information Security (In Chinese)  <a href="paper/jnis2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p lang="en-US"><span class="blue">2024</span></p>
 
