--- a/publications_topics.html
+++ b/publications_topics.html
@@ -118,12 +118,12 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="blue"> Distributed and Parallel Computing </span></p>
 
 
-<p><span class="style11">&bull; Y. Yang, J. Liu, J. Chen, X. Sun, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang. KAIR: A Statistical and Causal Approach to Pinpointing Stragglers in Distributed Model Training. The 40th IEEE/ACM International Conference on Automated Software Engineering (ASE) <a href="paper/ase2025-kair.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; Y. Yang, J. Liu, J. Chen, X. Sun, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang. KAIR: A Statistical and Causal Approach to Pinpointing Stragglers in Distributed Model Training. In Proc. of the 40th IEEE/ACM ASE 2025 <a href="paper/ase2025-kair.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
-<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang*, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. in the 20th ACM EuroSys 2025 <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; M. Zhang, G. Li, C. Guo, R. Yang*, S. Wang, H. Bao, X. Li, M. Xu, T. Wo, C. Hu.  SuperFE: A Scalable and Flexible Feature Extractor for ML-based Traffic Analysis Applications. In Proc. of the 20th ACM EuroSys 2025 <a href="paper/eurosys2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 
-<p><span class="style11">&bull; Z. Liu, R. Yang*, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. KALE: Elastic GPU Scheduling for Online DL Model Training. in the 15th ACM SoCC 2024 <a href="paper/socc2024-kale.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
+<p><span class="style11">&bull; Z. Liu, R. Yang*, J. Ouyang, W. Jiang, T. Ye, M. Zhang, S. Huang, J. Huang, C. Song, D. Zhang, T. Wo, C. Hu. KALE: Elastic GPU Scheduling for Online DL Model Training. In Proc. of the 15th ACM SoCC 2024 <a href="paper/socc2024-kale.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
 
 <p><span class="style11">&bull; R. Yang and J. Xu. Resilient QoS-Aware Workload Co-Scheduling and User Anomaly Detection in Shared Computing Clusters, the UK Alan Turing Institute Workshop on Edge-Cloud Infrastructure for Distributed Intelligent Computing, 2023  
@@ -238,9 +238,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p lang="en-US"><span class="blue"> System Dependability </span></p>
 
-<p><span class="style11">&bull; X. Sun, X. Liu, Q. Ye, H. Hu, R. Yang, H. He, W. Zhang. DPDeno: A Post-Processing Framework for Releasing Differentially Private Spatio-Temporal Mobility Features.  IEEE Transactions on Information Forensics and Security (TIFS) <a href="paper/tifs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; X. Sun, X. Liu, Q. Ye, H. Hu, R. Yang, H. He, W. Zhang. DPDeno: A Post-Processing Framework for Releasing Differentially Private Spatio-Temporal Mobility Features.  IEEE Transactions on Information Forensics and Security (TIFS), 2025 <a href="paper/tifs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
-<p><span class="style11">&bull; Z. Wang, J. Liu, P. Zhang, X. Sun, X. Wang, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang*. KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale. The 40th IEEE/ACM International Conference on Automated Software Engineering (ASE) <a href="paper/ase2025-kaiops.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; Z. Wang, J. Liu, P. Zhang, X. Sun, X. Wang, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang*. KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale. In Proc. of the 40th IEEE/ACM ASE 2025 <a href="paper/ase2025-kaiops.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; X. Mou, R. Wang, T. Wang, R. Yang*, S. Chen, J. Sun, T. Wo, X. Liu. CAPMix: Robust Time Series Anomaly Detection Based on Abnormal Assumptions with Dual-Space Mixup. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.06419"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
 
@@ -248,15 +248,18 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p><span class="style11">&bull; Y. Zhao, M. Zhang, T. Wo, R. Yang, C. Hu. BTDefense: A Priority-Aware Adaptive Strategy Against the Block Table Overflow Attack in vLLM. The 30th Symposium on Operating Systems (SOSP), 2024, poster <a href="paper/sosp2024-poster.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
-<p><span class="style11">&bull; R. Wang, X. Mou, R. Yang*, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD), 2024
+<p><span class="style11">&bull; X. Sun, W. Zhang, H. He, R. Yang. A Survey on Differentially Private Methods for Trajectory Data. Journal of Network and Information Security (In Chinese), 2025  <a href="paper/jnis2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; R. Wang, X. Mou, R. Yang*, K. Gao, P. Liu, C. Liu, T. Wo and X. Liu. CutAddPaste: Time Series Anomaly Detection by Exploiting Abnormal Knowledge. In Proc. of the 30th ACM KDD, 2024
 <a href="paper/kdd2024-cap.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
-<p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. IEEE International Conference on Data Engineering (ICDE), 2024
+<p><span class="style11">&bull; X. Sun, Q. Ye, H. Hu, J. Duan, T. Wo, J. Xu and R. Yang. LDPRecover: Recovering Frequencies from Poisoning Attacks against Local Differential Privacy. In Proc. of IEEE ICDE 2024
 <a href="paper/icde2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 </span></p>	
 
-<p><span class="style11">&bull; L. He, Y. Yang, Q. Wu, H. Liu, R. Yang, X. Wang, H. Peng, Y. Liao, P. Zhou. BotDGT: Dynamicity-aware Social Network Bot Detection with Dynamic Graph Transformers. The 33rd International Joint Conference on Artificial Intelligence (IJCAI), 2024
+
+<p><span class="style11">&bull; L. He, Y. Yang, Q. Wu, H. Liu, R. Yang, X. Wang, H. Peng, Y. Liao, P. Zhou. BotDGT: Dynamicity-aware Social Network Bot Detection with Dynamic Graph Transformers. In Proc. of the 33rd IJCAI, 2024
 <a href="paper/ijcai2024.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>  
 </span></p>	
 
