--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@ p{ margin:10px auto}
 
 <p><span class="style11"> 
 
+<p><span class="style11"> (27/09/2025) Two papers have been accepted by ACM SoCC 2025. These works investigate new approaches to cost-efficient LLM serving (Cauchy) and effective job packing for DL model training (Cuckoo), both on heterogeneous GPUs. Big congrats to Yihui, Yuzhang and the entire RAIDS-Kuaishou joint team!  
+
+	
 <p><span class="style11"> (13/09/2025) Our works on AIOps and straggler detection in AI infrastructure have been accepted by ASE 2025. Big congrats to Zeying and Yitang! </span></p>
  
 <p><span class="style11"> (10/09/2025) Our works on releasing differentially private features has been accepted by TIFS 2025. Big congrats to Xinyue and Xiaoyu! </span></p>
@@ -259,13 +262,12 @@ p{ margin:10px auto}
 <p><span class="Bolder"><!--img src="icons/research-banner.png" width="25" height="25" border="0"/--> Research Interests</span></p>
 <p><span class="style11">Broadly, I am interested in designing system modules and/or mechanisms for tackling trade-offs in efficiency, performance, reliability and cost for distributed and parallel computing systems at scale such as cloud computing, big data, deep learning training/inference, IoT, etc. My research mainly focuses on: </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced resource efficiency of large-scale computing infrastructures:</strong>
-		QoS-aware resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>, <a href="paper/eurosys2025.pdf" style="text-decoration: none">EuroSys'25</a>], 
-		DL model training acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>,<a href="paper/socc2024-kale.pdf" style="text-decoration: none">SoCC'24</a>,<a href="paper/ase2025-kair.pdf" style="text-decoration: none">ASE'25b</a>], 
+		QoS-aware resource management [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>, <a href="paper/icdcs2018.pdf" style="text-decoration: none">ICDCS'18</a>, <a href="paper/socc2019-perphon.pdf" style="text-decoration: none">SoCC'19</a>, <a href="paper/tpds2020-rose.pdf" style="text-decoration: none">TPDS'20a</a>, <a href="paper/ccgrid2021.pdf" style="text-decoration: none">CCGRID'21</a>, <a href="paper/tpds2022-toposcaling.pdf" style="text-decoration: none">TPDS'22a</a>, <a href="paper/tsc2023.pdf" style="text-decoration: none">TSC'23</a>, <a href="paper/eurosys2025.pdf" style="text-decoration: none">EuroSys'25</a>,<a href="paper/socc2025-cuckoo.pdf" style="text-decoration: none">SoCC'25a</a>], 
+		DL/LLM model training/inference acceleration [<a href="paper/tpds2021-horus.pdf" style="text-decoration: none">TPDS'22b</a>,<a href="paper/sc2022.pdf" style="text-decoration: none">SC'22</a>,<a href="paper/socc2024-kale.pdf" style="text-decoration: none">SoCC'24</a>,<a href="paper/socc2025-cuckoo.pdf" style="text-decoration: none">SoCC'25a</a>,<a href="paper/socc2025-cauchy.pdf" style="text-decoration: none">SoCC'25b</a>,<a href="paper/ase2025-kair.pdf" style="text-decoration: none">ASE'25b</a>], 
 		and multi-objective optimization [<a href="paper/aaai2025.pdf" style="text-decoration: none">AAAI'25</a>, <a href="paper/fcs2025.pdf" style="text-decoration: none">FCS'25</a>, <a href="paper/tpds2019-gapar-full.pdf" style="text-decoration: none">TPDS'20b</a>, <a href="paper/jpdc2021-elsevier.pdf" style="text-decoration: none">JPDC'21</a>, <a href="paper/secon2022.pdf" style="text-decoration: none">SECON'22</a>, <a href="paper/jpdc2023.pdf" style="text-decoration: none">JPDC'23</a>], etc.; </span></p>
 	<p><span class="style11">&bull; <strong>Enhanced system dependability:</strong>
-		fault tolerance and failure recovery [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>, <a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>],  
-		anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>, <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>, <a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>, <a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>,<a href="paper/ase2025-kaiops.pdf" style="text-decoration: none">ASE'25a</a>]
-		and dependability modeling [<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>, <a href="paper/icde2024.pdf" style="text-decoration: none">SOSP'24 poster</a>]</span></p> 
+		fault tolerance and failure recovery [<a href="paper/vldb2014.pdf" style="text-decoration: none">VLDB'14</a>,<a href="paper/lisa2014.pdf" style="text-decoration: none">LISA'14</a>,<a href="paper/hase2016.pdf" style="text-decoration: none">HASE'16</a>,<a href="paper/tsc2016.pdf" style="text-decoration: none">TSC'17</a>, <a href="paper/dsn2016.pdf" style="text-decoration: none">DSN'16</a>,<a href="paper/tsc2016b.pdf" style="text-decoration: none">TSC'19</a>,<a href="paper/icde2024.pdf" style="text-decoration: none">ICDE'24</a>, <a href="paper/icde2024.pdf" style="text-decoration: none">SOSP'24 poster</a>],  
+		and anomaly detection [<a href="paper/tnnls2021-hawk.pdf" style="text-decoration: none">TNNLS'21</a>, <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">TKDE'21</a>, <a href="paper/tweb2022-rosgas.pdf" style="text-decoration: none">TWEB'22</a>, <a href="paper/www2023-fedack.pdf" style="text-decoration: none">WWW'23b</a>, <a href="paper/ijcai2023.pdf" style="text-decoration: none">IJCAI'24</a>, <a href="paper/kdd2024-cap.pdf" style="text-decoration: none">KDD'24b</a>,<a href="paper/ase2025-kaiops.pdf" style="text-decoration: none">ASE'25a</a>]</span></p> 
 	<p><span class="style11">&bull; <strong>Enhanced intelligent systems and applications:</strong>  data-centric engineering [<a href="paper/sose2016.pdf" style="text-decoration: none">SOSE'16</a>,<a href="paper/csur2020.pdf" style="text-decoration: none">CSUR'20</a>,<a href="paper/tkde2021.pdf" style="text-decoration: none">TKDE'23</a>,<a href="paper/tifs2025.pdf" style="text-decoration: none">TIFS'25</a>], 
 		graph representation learning [<a href="paper/tc2021.pdf" style="text-decoration: none">TC'21</a>,<a href="paper/tois2021-riognn.pdf" style="text-decoration: none">TOIS'21</a>,<a href="paper/www2023-segsl.pdf" style="text-decoration: none">WWW'23a</a>, <a href="paper/kdd2024-sebot.pdf" style="text-decoration: none">KDD'24a</a>], etc. </span></p>
 </div>
@@ -309,6 +311,11 @@ p{ margin:10px auto}
 <div id="div_pub">
 
 <p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
+
+
+<p><span class="style11">&bull; <a href="paper/socc-cauchy.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment</a>. ACM SoCC 2025 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
+
+<p><span class="style11">&bull; <a href="paper/socc-cuckoo.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> Cuckoo: Deadline-Aware Job Packing on Heterogeneous GPUs for DL Model Training</a>. ACM SoCC 2025 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
 
 <p><span class="style11">&bull; <a href="paper/ase2025-kaiops.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale</a>. IEEE/ACM ASE 2025 <span class="red">(CCF A)</span></span></p>
 
@@ -421,10 +428,10 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="Bolder"><!--img src="icons/supervision-banner.png" width="25" height="25" border="0"/--> Research Team </span></p>
 
 <p><span class="style11"><strong>PhD Students</strong> </span></p>
-<p><span class="style11">&bull; <a href="https://williamericcheung.github.io/" style="text-decoration: none">Yihui Zhang</a> (2023.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; <a href="https://williamericcheung.github.io/" style="text-decoration: none">Yihui Zhang</a> (2023.9- , BeihangU, w/ Prof. Tianyu Wo): leading authors of SoCC'25 </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.9- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper </span></p> 
-<p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU) </span></p> 
-<p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU): leading authors in ASE'25x2, SoCC'25 </span></p> 
+<p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU): leading authors in SoCC'25 </span></p> 
 <p><span class="style11">&bull; Wang Xiong (2025.9- , BeihangU) </span></p> 
 <p><span class="style11">&bull; Zhuoren Ye (2025.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p> 
 <p><span class="style11">&bull; Dinghao Xue (2025.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
@@ -439,10 +446,11 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; [Class 2023] Zhida Jiang, <a href="https://mondaycha.github.io/" style="text-decoration: none">Yilong Li</a>, Zeying Wang (co-supervised w/ Prof. Tianyu Wo/Chunming Hu) </span></p>
 <p><span class="style11">&bull; [Class 2024] Zexin Wu; Mingming Zhang, Yujie Wang (w/ Prof. Tianyu Wo/Chunming Hu)</span></p>
 <p><span class="style11">&bull; [Class 2025] Yitang Yang, Xi Wang, Zhuocheng Ge, TinHang Alix Hui</span></p>
+<p><span class="style11">&bull; [Class 2026] Yuxi Luo, Yanxiang Chen, FangZheng Li, Yunhan Wang </span></p>
 <p><span class="style11">&bull; [Part Time] Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang, Lubo Yang, Xiang Li</span></p>
 
 <p><span class="style11"><strong>Undergraduate Research Assistants</strong> </span></p>
-<p><span class="style11">&bull; Huitian Xue, Yao Yin, Yuxi Luo, Yanxiang Chen, Zhenqi Wang, Yunhan Wang, Ziyu Cheng </span></p>
+<p><span class="style11">&bull; Huitian Xue, Yao Yin, Yuxi Luo, Yanxiang Chen, Fangzheng Li, Zhenqi Wang, Yunhan Wang, Ziyu Cheng </span></p>
 
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
