--- a/publications.html
+++ b/publications.html
@@ -116,6 +116,10 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="blue">2025</span></p>
 
+<p><span class="style11">&bull; Y. Zhang, R. Yang*, J. Liu, W. Jiang, T. Ye, Y. Liao, P. Zhang, T. Zhang, K. Shang, T. Wo, C. Hu, C. Song, J. Ouyang. Cuckoo: Deadline-Aware Job Packing on Heterogeneous GPUs for DL Model Training. The 16th ACM Symposium on Cloud Computing (SoCC) <a href="paper/socc-cuckoo.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; Y. Zhang, H. Shen, R. Yang*, D. Tian, Y. Luo, M. Zhang, L. Li, C. Hu, T. Wo, C. Song, J. Ouyang. Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment. The 16th ACM Symposium on Cloud Computing (SoCC) <a href="paper/socc-cauchy.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
 <p><span class="style11">&bull; Z. Wang, J. Liu, P. Zhang, X. Sun, X. Wang, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang*. KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale. The 40th IEEE/ACM International Conference on Automated Software Engineering (ASE) <a href="paper/ase2025-kaiops.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; Y. Yang, J. Liu, J. Chen, X. Sun, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang. KAIR: A Statistical and Causal Approach to Pinpointing Stragglers in Distributed Model Training. The 40th IEEE/ACM International Conference on Automated Software Engineering (ASE) <a href="paper/ase2025-kair.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
@@ -130,9 +134,12 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; Z. Zou, M. Zhang, G. Li, R. Yang, T. Wo, C. Hu, M. Xu. Recent Advances in Programmable Switches Driven Network Security. Journal of Software (In Chinese) <a href="paper/jos2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
+<p><span class="style11">&bull; X. Sun, W. Zhang, H. He, R. Yang. A Survey on Differentially Private Methods for Trajectory Data. Journal of Network and Information Security (In Chinese)  <a href="paper/jnis2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
 <p><span class="style11">&bull; X. Mou, R. Wang, T. Wang, R. Yang*, S. Chen, J. Sun, T. Wo, X. Liu. CAPMix: Robust Time Series Anomaly Detection Based on Abnormal Assumptions with Dual-Space Mixup. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.06419"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
 
-<p><span class="style11">&bull; X. Sun, W. Zhang, H. He, R. Yang. A Survey on Differentially Private Methods for Trajectory Data. Journal of Network and Information Security (In Chinese)  <a href="paper/jnis2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; T. Wang, R. Wang, X. Mou, M. Ma, T. Wo, R. Yang*, X. Liu. An Improved Time Series Anomaly Detection by Applying Structural Similarity. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.20184"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
+
 
 <p lang="en-US"><span class="blue">2024</span></p>
 
@@ -262,7 +269,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a><a href="https://arxiv.org/abs/2104.07886"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>  <span class="red">(Hot Paper in ESI)</span>
 </span></p>
 
-<p lang="en-US"><span class="blue">2020</span></p>
+<p lang="en-US"><span class="blue">2020 and Before</span></p>
 
 <p><span class="style11">  &bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. Performance-aware Speculative Resource Oversubscription for Large-scale Clusters, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 
@@ -293,10 +300,6 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 <a href="paper/cloud2020.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
 </span></p>
 
-
-
-<p lang="en-US"><span class="blue">2019</span></p>
-
 <p><span class="style11">  &bull; Z. Wen, T.Lin, R. Yang*, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019 
 <a href="paper/tpds2019-gapar-full.pdf">[full version]</a> <a href="paper/tpds2019-gapar.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> 
@@ -324,12 +327,6 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; P. Townend, S. J. Clement, D. Burdett, R. Yang, J. Shaw, B. Slater, J. Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 
 <a href="paper/sose2019-k8s.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a>
 </span></p>
-
-
-
-
-
-<p lang="en-US"> <span class="blue">2018 and Before </span></p>
 
 <p><span class="style11">  &bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
 </span></p>
