--- a/publications_topics.html
+++ b/publications_topics.html
@@ -117,6 +117,9 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="blue"> Distributed and Parallel Computing </span></p>
 
+<p><span class="style11">&bull; Y. Zhang, R. Yang*, J. Liu, W. Jiang, T. Ye, Y. Liao, P. Zhang, T. Zhang, K. Shang, T. Wo, C. Hu, C. Song, J. Ouyang. Cuckoo: Deadline-Aware Job Packing on Heterogeneous GPUs for DL Model Training. in Proc. of the 16th ACM SoCC 2025 <a href="paper/socc-cuckoo.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; Y. Zhang, H. Shen, R. Yang*, D. Tian, Y. Luo, M. Zhang, L. Li, C. Hu, T. Wo, C. Song, J. Ouyang. Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment. in Proc. of the 16th ACM SoCC 2025 <a href="paper/socc-cauchy.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; Y. Yang, J. Liu, J. Chen, X. Sun, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang. KAIR: A Statistical and Causal Approach to Pinpointing Stragglers in Distributed Model Training. In Proc. of the 40th IEEE/ACM ASE 2025 <a href="paper/ase2025-kair.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
@@ -243,6 +246,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 <p><span class="style11">&bull; Z. Wang, J. Liu, P. Zhang, X. Sun, X. Wang, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang*. KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale. In Proc. of the 40th IEEE/ACM ASE 2025 <a href="paper/ase2025-kaiops.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; X. Mou, R. Wang, T. Wang, R. Yang*, S. Chen, J. Sun, T. Wo, X. Liu. CAPMix: Robust Time Series Anomaly Detection Based on Abnormal Assumptions with Dual-Space Mixup. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.06419"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
+
+<p><span class="style11">&bull; T. Wang, R. Wang, X. Mou, M. Ma, T. Wo, R. Yang*, X. Liu. An Improved Time Series Anomaly Detection by Applying Structural Similarity. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.20184"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
 
 <p><span class="style11">&bull; Z. Zou, M. Zhang, G. Li, R. Yang, T. Wo, C. Hu, M. Xu. Recent Advances in Programmable Switches Driven Network Security. Journal of Software, 2025 (In Chinese) <a href="paper/jos2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
