--- a/services.html
+++ b/services.html
@@ -124,6 +124,8 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; IJCAI'21-now </span></p>
 <p><span class="style11">&bull; AAAI'22-now </span></p>
 <p><span class="style11">&bull; BigCom'24-now </span></p>
+<p><span class="style11">&bull; ACM WWW'26, KDD'25 </span></p>
+
 
 
 
@@ -138,7 +140,7 @@ p{ margin:10px auto}
 
  
 <p lang="en-US">&nbsp;&nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p><span class="style11">Updated by April 2024 </span> &nbsp; &nbsp;</p>
+<p><span class="style11">Updated by Oct. 2025 </span> &nbsp; &nbsp;</p>
 
 </p>
 </td>
