--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ p{ margin:10px auto}
 </span>
 
 <p><span class="style11"> I am currently acting as an associate editor of ACM Computing Surveys and CCF Computer Engineering and Design Journal, and on the program committees of many conferences, 
-	including IJCAI, ECAI, AAAI, CLOUD, etc., I was also the program/area chair of multiple conferences. 
+	including WWW, KDD, IJCAI, ECAI, AAAI, CLOUD, etc., I was also the program/area chair of multiple conferences. 
 </span>
 
 <p><span class="style11"> My official university web page in Chinese is here <a href="https://shi.buaa.edu.cn/yangrenyu/zh_CN/index.htm">中文简介</a>
@@ -429,13 +429,13 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11"><strong>PhD Students</strong> </span></p>
 <p><span class="style11">&bull; <a href="https://williamericcheung.github.io/" style="text-decoration: none">Yihui Zhang</a> (2023.9- , BeihangU, w/ Prof. Tianyu Wo): leading authors of SoCC'25 </span></p>
-<p><span class="style11">&bull; Jinghao Wang (2023.9- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper </span></p> 
-<p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU): leading authors in ASE'25x2, SoCC'25 </span></p> 
-<p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU): leading authors in SoCC'25 </span></p> 
-<p><span class="style11">&bull; Wang Xiong (2025.9- , BeihangU) </span></p> 
-<p><span class="style11">&bull; Zhuoren Ye (2025.9- , BeihangU, w/ Prof. Tianyu Wo) </span></p> 
+<p><span class="style11">&bull; Jinghao Wang (2023.9- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper, team lead of Zhijiang's project </span></p> 
+<p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU): leading authors of ASE'25x2 and SoCC'25, team lead of Kuaishou's project </span></p> 
+<p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU): leading authors of SoCC'25 </span></p> 
+<p><span class="style11">&bull; Wang Xiong (2025.9- , BeihangU): team lead of CASIC's project </span></p> 
+<p><span class="style11">&bull; Zhuoren Ye (2025.9- , BeihangU, w/ Prof. Tianyu Wo): team lead of Huawei's project </span></p> 
 <p><span class="style11">&bull; Dinghao Xue (2025.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
-<p><span class="style11">&bull; Huitian Xue (2026.9- , BeihangU) </span></p> 
+<p><span class="style11">&bull; Huitian Xue (2026.9- , BeihangU): tech lead of Alibaba's project </span></p> 
 <p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, part time, w/ Prof. Chunming Hu) </span></p> 
 <p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
 <p><span class="style11">&bull; Dawei Gao (2025.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
@@ -491,7 +491,7 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; Technical Program Chair: IEEE International Conference on Joint Cloud Computing (JCC), 2025, 2020, 2019 </span></p>
 <p><span class="style11">&bull; Area/Track Chair: International Conference on Big Data Computing and Communications (BigCom) 2025, IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
-<p><span class="style11">&bull; PC Member: IJCAI, ECAI, AAAI, ICCV, CLOUD, UCC, HPCC, etc. </span></p>
+<p><span class="style11">&bull; PC Member: WWW, KDD, IJCAI, ECAI, AAAI, ICCV, CLOUD, UCC, HPCC, etc. </span></p>
 
 <p><span class="style11">&bull; Journal Reviewers: TPDS, TDSC, TC, TKDE, TSC, TIFS, TSE, TCC, TKDD, CSUR, etc. </span></p> 
 
@@ -548,7 +548,7 @@ I had the opportunity to work closely with many institutes around the world and 
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">Updated by Jan. 2025</span></p>
+<p><span class="style11">Updated by Oct. 2025</span></p>
 <p><span class="style11"><img src="icons/yin.gif" width="50" alt="Renyu" border="0" title="Renyu Yang" />&nbsp;&nbsp;<img src="images/QRcode.png" width="50" alt="QRCode" border="0" title="Beihang Homepage" /></span></p>
 
  
