--- a/publications.html
+++ b/publications.html
@@ -136,6 +136,10 @@ p{ margin:10px auto}
 
 <p><span class="style11">&bull; X. Sun, W. Zhang, H. He, R. Yang. A Survey on Differentially Private Methods for Trajectory Data. Journal of Network and Information Security (In Chinese)  <a href="paper/jnis2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
+<p><span class="style11">&bull; M. Chen, K. Wang, C. Huang, F. Yu, R. Yang, H. Cheng, M. Chen. LASEFlow: A Label-Aware Security Enhancement Framework for Serverless Workflows. IEEE TrustCom. <a href="paper/trustcom2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; K. Yang, D. Zhang, M. Qi, X. Peng, S. Zhao, R. Yang, X. Yang. AURANAV : Safety-Centric Navigation through Real-Time Familiarity and Social Awareness. The 16th IEEE Joint Cloud Conference (JCC). <a href="paper/jcc2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
 <p><span class="style11">&bull; X. Mou, R. Wang, T. Wang, R. Yang*, S. Chen, J. Sun, T. Wo, X. Liu. CAPMix: Robust Time Series Anomaly Detection Based on Abnormal Assumptions with Dual-Space Mixup. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.06419"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
 
 <p><span class="style11">&bull; T. Wang, R. Wang, X. Mou, M. Ma, T. Wo, R. Yang*, X. Liu. An Improved Time Series Anomaly Detection by Applying Structural Similarity. arXiv Preprint, 2025 <a href="https://arxiv.org/abs/2509.20184"><img src="icons/arxiv.png" width="24" height="14" border="0", title="arxiv version"/></a>
