--- a/publications_topics.html
+++ b/publications_topics.html
@@ -241,6 +241,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 
 <p lang="en-US"><span class="blue"> System Dependability </span></p>
 
+<p><span class="style11">&bull; M. Chen, K. Wang, C. Huang, F. Yu, R. Yang, H. Cheng, M. Chen. LASEFlow: A Label-Aware Security Enhancement Framework for Serverless Workflows. In Proc. of IEEE TrustCom 2025 <a href="paper/trustcom2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
 <p><span class="style11">&bull; X. Sun, X. Liu, Q. Ye, H. Hu, R. Yang, H. He, W. Zhang. DPDeno: A Post-Processing Framework for Releasing Differentially Private Spatio-Temporal Mobility Features.  IEEE Transactions on Information Forensics and Security (TIFS), 2025 <a href="paper/tifs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; Z. Wang, J. Liu, P. Zhang, X. Sun, X. Wang, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang*. KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale. In Proc. of the 40th IEEE/ACM ASE 2025 <a href="paper/ase2025-kaiops.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
@@ -317,6 +319,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; C. Luo, T. Chen, R. Yang*, W. Wu, C. Hu. GenSC: A Novel and General Local Search Framework for Set Covering Problem. Frontiers of Computer Science (FCS), 2025 <a href="paper/fcs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; H. Wang, R. Yang*, J. Sun, H. Peng, X. Mou, T. Wo and X. Liu. IOP: An Idempotent-Like Optimization Method on the Pareto Front of Hypernetwork. The 39th AAAI Conference on Artificial Intelligence (AAAI), 2025 <a href="paper/aaai2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
+<p><span class="style11">&bull; K. Yang, D. Zhang, M. Qi, X. Peng, S. Zhao, R. Yang, X. Yang. AURANAV : Safety-Centric Navigation through Real-Time Familiarity and Social Awareness. In Proc. of IEEE JCC 2025. <a href="paper/jcc2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; Y. Yang, Q. Wu, B. He, H. Peng, R. Yang, Z. Hao, Y. Liao. SEBot: Structural Entropy Guided Multi-View Contrastive learning for Social Bot Detection. The 30th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD), 2024 <a href="paper/kdd2024-sebot.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a> </span></p>
 
