--- a/index.html
+++ b/index.html
@@ -313,9 +313,9 @@ p{ margin:10px auto}
 <p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
 
 
-<p><span class="style11">&bull; <a href="paper/socc-cauchy.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment</a>. ACM SoCC 2025 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
+<p><span class="style11">&bull; <a href="paper/socc2025-cauchy.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment</a>. ACM SoCC 2025 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
 
-<p><span class="style11">&bull; <a href="paper/socc-cuckoo.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> Cuckoo: Deadline-Aware Job Packing on Heterogeneous GPUs for DL Model Training</a>. ACM SoCC 2025 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
+<p><span class="style11">&bull; <a href="paper/socc2025-cuckoo.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> Cuckoo: Deadline-Aware Job Packing on Heterogeneous GPUs for DL Model Training</a>. ACM SoCC 2025 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
 
 <p><span class="style11">&bull; <a href="paper/ase2025-kaiops.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale</a>. IEEE/ACM ASE 2025 <span class="red">(CCF A)</span></span></p>
 
