--- a/publications_topics.html
+++ b/publications_topics.html
@@ -117,9 +117,9 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="blue"> Distributed and Parallel Computing </span></p>
 
-<p><span class="style11">&bull; Y. Zhang, R. Yang*, J. Liu, W. Jiang, T. Ye, Y. Liao, P. Zhang, T. Zhang, K. Shang, T. Wo, C. Hu, C. Song, J. Ouyang. Cuckoo: Deadline-Aware Job Packing on Heterogeneous GPUs for DL Model Training. in Proc. of the 16th ACM SoCC 2025 <a href="paper/socc-cuckoo.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; Y. Zhang, R. Yang*, J. Liu, W. Jiang, T. Ye, Y. Liao, P. Zhang, T. Zhang, K. Shang, T. Wo, C. Hu, C. Song, J. Ouyang. Cuckoo: Deadline-Aware Job Packing on Heterogeneous GPUs for DL Model Training. in Proc. of the 16th ACM SoCC 2025 <a href="paper/socc2025-cuckoo.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
-<p><span class="style11">&bull; Y. Zhang, H. Shen, R. Yang*, D. Tian, Y. Luo, M. Zhang, L. Li, C. Hu, T. Wo, C. Song, J. Ouyang. Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment. in Proc. of the 16th ACM SoCC 2025 <a href="paper/socc-cauchy.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; Y. Zhang, H. Shen, R. Yang*, D. Tian, Y. Luo, M. Zhang, L. Li, C. Hu, T. Wo, C. Song, J. Ouyang. Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment. in Proc. of the 16th ACM SoCC 2025 <a href="paper/socc2025-cauchy.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; Y. Yang, J. Liu, J. Chen, X. Sun, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang. KAIR: A Statistical and Causal Approach to Pinpointing Stragglers in Distributed Model Training. In Proc. of the 40th IEEE/ACM ASE 2025 <a href="paper/ase2025-kair.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
