--- a/publications.html
+++ b/publications.html
@@ -116,9 +116,9 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="blue">2025</span></p>
 
-<p><span class="style11">&bull; Y. Zhang, R. Yang*, J. Liu, W. Jiang, T. Ye, Y. Liao, P. Zhang, T. Zhang, K. Shang, T. Wo, C. Hu, C. Song, J. Ouyang. Cuckoo: Deadline-Aware Job Packing on Heterogeneous GPUs for DL Model Training. The 16th ACM Symposium on Cloud Computing (SoCC) <a href="paper/socc-cuckoo.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; Y. Zhang, R. Yang*, J. Liu, W. Jiang, T. Ye, Y. Liao, P. Zhang, T. Zhang, K. Shang, T. Wo, C. Hu, C. Song, J. Ouyang. Cuckoo: Deadline-Aware Job Packing on Heterogeneous GPUs for DL Model Training. The 16th ACM Symposium on Cloud Computing (SoCC) <a href="paper/socc2025-cuckoo.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
-<p><span class="style11">&bull; Y. Zhang, H. Shen, R. Yang*, D. Tian, Y. Luo, M. Zhang, L. Li, C. Hu, T. Wo, C. Song, J. Ouyang. Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment. The 16th ACM Symposium on Cloud Computing (SoCC) <a href="paper/socc-cauchy.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+<p><span class="style11">&bull; Y. Zhang, H. Shen, R. Yang*, D. Tian, Y. Luo, M. Zhang, L. Li, C. Hu, T. Wo, C. Song, J. Ouyang. Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment. The 16th ACM Symposium on Cloud Computing (SoCC) <a href="paper/socc2025-cauchy.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; Z. Wang, J. Liu, P. Zhang, X. Sun, X. Wang, T. Wo, C. Hu, C. Song, J. Ouyang, R. Yang*. KAIOps: A Platform Solution of End-to-End Multi-Modal AIOps for AI Training at Scale. The 40th IEEE/ACM International Conference on Automated Software Engineering (ASE) <a href="paper/ase2025-kaiops.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
