--- a/publications.html
+++ b/publications.html
@@ -113,6 +113,9 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. ' = co-first authors with equal contribution by alphabetical order. # =  authors in alphabetical order </span> &nbsp; &nbsp;</p>
 
 
+<p lang="en-US"><span class="blue">2026</span></p>
+<p><span class="style11">&bull; J. Liu, Y. Zhang, T. Huang, W. Xu, R. Yang*. Distilling Cross-Modal Knowledge via Feature Disentanglement. The 40th AAAI Conference on Artificial Intelligence (AAAI) (oral) <a href="paper/aaai2026.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
+
 
 <p lang="en-US"><span class="blue">2025</span></p>
 
