--- a/index.html
+++ b/index.html
@@ -197,9 +197,11 @@ p{ margin:10px auto}
 
 <p><span class="style11"> 
 
+<p><span class="style11"> (08/11/2025) Our work on cross-modal knowledge distillation using feature disentanglement has been accepted by AAAI 2026. Big congrats to Junhong!</span></p>
+
+
 <p><span class="style11"> (27/09/2025) Two papers have been accepted by ACM SoCC 2025. These works investigate new approaches to cost-efficient LLM serving (Cauchy) and effective job packing for DL model training (Cuckoo), both on heterogeneous GPUs. Big congrats to Yihui, Yuzhang and the entire RAIDS-Kuaishou joint team!  
 
-	
 <p><span class="style11"> (13/09/2025) Our works on AIOps and straggler detection in AI infrastructure have been accepted by ASE 2025. Big congrats to Zeying and Yitang! </span></p>
  
 <p><span class="style11"> (10/09/2025) Our works on releasing differentially private features has been accepted by TIFS 2025. Big congrats to Xinyue and Xiaoyu! </span></p>
@@ -312,6 +314,8 @@ p{ margin:10px auto}
 
 <p><span class="Bolder"><!--img src="icons/paper-banner.png" width="25" height="25" border="0"/--> Selected Recent Publications </span></p>
 
+
+<p><span class="style11">&bull; <a href="paper/aaai2026.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> Distilling Cross-Modal Knowledge via Feature Disentanglement</a>. AAAI 2026 <span class="red">(CCF A) </span></span></p>
 
 <p><span class="style11">&bull; <a href="paper/socc2025-cauchy.pdf" style="text-decoration: none"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/> Cauchy: A Cost-Efficient LLM Serving System through Adaptive Heterogeneous Deployment</a>. ACM SoCC 2025 <span class="red">(CCF B, premier conference on Cloud)</span></span></p>
 
@@ -428,14 +432,14 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="Bolder"><!--img src="icons/supervision-banner.png" width="25" height="25" border="0"/--> Research Team </span></p>
 
 <p><span class="style11"><strong>PhD Students</strong> </span></p>
-<p><span class="style11">&bull; <a href="https://williamericcheung.github.io/" style="text-decoration: none">Yihui Zhang</a> (2023.9- , BeihangU, w/ Prof. Tianyu Wo): leading authors of SoCC'25 </span></p>
+<p><span class="style11">&bull; <a href="https://williamericcheung.github.io/" style="text-decoration: none">Yihui Zhang</a> (2023.9- , BeihangU, w/ Prof. Tianyu Wo): leading author of SoCC'25 </span></p>
 <p><span class="style11">&bull; Jinghao Wang (2023.9- , BeihangU, w/ Prof. Chunming Hu and Dr. Xu Wang): JCC'24 Best Paper, team lead of Zhijiang's project </span></p> 
-<p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU): leading authors of ASE'25x2 and SoCC'25, team lead of Kuaishou's project </span></p> 
-<p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU): leading authors of SoCC'25 </span></p> 
-<p><span class="style11">&bull; Wang Xiong (2025.9- , BeihangU): team lead of CASIC's project </span></p> 
-<p><span class="style11">&bull; Zhuoren Ye (2025.9- , BeihangU, w/ Prof. Tianyu Wo): team lead of Huawei's project </span></p> 
+<p><span class="style11">&bull; Junhong Liu (2024.9- , BeihangU): leading author of AAAI'26, ASE'25 x2 and SoCC'25, team lead of Kuaishou project </span></p> 
+<p><span class="style11">&bull; Yuzheng Zhang (2025.9- , BeihangU): leading author of SoCC'25 </span></p> 
+<p><span class="style11">&bull; Wang Xiong (2025.9- , BeihangU): team lead of CASIC project </span></p> 
+<p><span class="style11">&bull; Zhuoren Ye (2025.9- , BeihangU, w/ Prof. Tianyu Wo): team lead of Huawei project </span></p> 
 <p><span class="style11">&bull; Dinghao Xue (2025.9- , BeihangU, w/ Prof. Chunming Hu) </span></p> 
-<p><span class="style11">&bull; Huitian Xue (2026.9- , BeihangU): tech lead of Alibaba's project </span></p> 
+<p><span class="style11">&bull; Huitian Xue (2026.9- , BeihangU): tech lead of Alibaba project </span></p> 
 <p><span class="style11">&bull; Yang Zhang (2023.9- , BeihangU, National College of Elite Engineering, part time, w/ Prof. Chunming Hu) </span></p> 
 <p><span class="style11">&bull; Huaqiang Qiu (2024.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
 <p><span class="style11">&bull; Dawei Gao (2025.9- , BeihangU, National College of Elite Engineering, part time) </span></p> 
