--- a/publications_topics.html
+++ b/publications_topics.html
@@ -315,6 +315,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p lang="en-US"><span class="blue"> AI Algorithms and Applications </span></p>
 
+<p><span class="style11">&bull; J. Liu, Y. Zhang, T. Huang, W. Xu, R. Yang*. Distilling Cross-Modal Knowledge via Feature Disentanglement. The 40th AAAI Conference on Artificial Intelligence (AAAI) (oral) <a href="paper/aaai2026.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
 <p><span class="style11">&bull; C. Luo, T. Chen, R. Yang*, W. Wu, C. Hu. GenSC: A Novel and General Local Search Framework for Set Covering Problem. Frontiers of Computer Science (FCS), 2025 <a href="paper/fcs2025.pdf"><img src="icons/pdf.png" width="14" height="14" border="0", title="paper"/></a></span></p>
 
