--- a/alumni.html
+++ b/alumni.html
@@ -151,6 +151,7 @@ I have been co-advising and/or working closely with many students/PDRAs mainly f
 
 
 <p><span class="style11"><strong> Former BSc. Students @UoLeeds and @BeihangU </strong></span></p> 
+<p><span class="style11">&bull; Zhenqi Wang, Yao Yin (BSc/Undergrad Intern, 2025 Beihang --> MSc. at Peking U), Longchun Zhao (BSc/Undergrad Intern, 2025 Beihang --> MSc. at Peking U)</span></p>	
 <p><span class="style11">&bull; Kairui Zhang, Yihui Gong, Danyang Wu, Longchun Zhao (BSc/Undergrad Intern, 2024-2025 Beihang)</span></p>	
 <p><span class="style11">&bull; Leo Bishop, Danielle Kushnir, Thomas Killeen, Dominik Strak (BSc, 2022-2023, UoLeeds, with Prof. Jie Xu)</span></p>
 <p><span class="style11">&bull;	Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, UoLeeds, with Prof. Jie Xu)</span></p>
