--- a/index.html
+++ b/index.html
@@ -450,10 +450,10 @@ I had the opportunity to work closely with many institutes around the world and 
 <p><span class="style11">&bull; [Class 2024] Zexin Wu; Mingming Zhang, Yujie Wang (w/ Prof. Tianyu Wo/Chunming Hu)</span></p>
 <p><span class="style11">&bull; [Class 2025] Yitang Yang, Xi Wang, Zhuocheng Ge, TinHang Alix Hui</span></p>
 <p><span class="style11">&bull; [Class 2026] Yuxi Luo, Yanxiang Chen, FangZheng Li, Yunhan Wang </span></p>
-<p><span class="style11">&bull; [Part Time] Lu Pei, Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang, Lubo Yang, Xiang Li</span></p>
+<p><span class="style11">&bull; [Part Time] Xiaoyu Liu, Tianyou Zeng, Zhiqi Zhang, Haiyang Tang, Lubo Yang, Xiang Li, Zhuolin Sai </span></p>
 
 <p><span class="style11"><strong>Undergraduate Research Assistants</strong> </span></p>
-<p><span class="style11">&bull; Huitian Xue, Yao Yin, Yuxi Luo, Yanxiang Chen, Fangzheng Li, Zhenqi Wang, Yunhan Wang, Ziyu Cheng </span></p>
+<p><span class="style11">&bull; Huitian Xue, Yuxi Luo, Yanxiang Chen, Fangzheng Li, Yunhan Wang, Ziyu Cheng </span></p>
 
 
 <p><span class="style11"><strong>Team Alumni</strong>: <a href="alumni.html" style="text-decoration: none">~$ alumni </a> </span></p>
@@ -467,11 +467,11 @@ I had the opportunity to work closely with many institutes around the world and 
 <!--p><span class="style11">&bull; <img src="icons/news.gif" width="25" height="12" border="0"/> Essentials of Modern Cloud Computing (Graduate Level, National College of Engineering Excellence, with Prof. Chunming Hu and co), [Spring 2024] </span></p-->
  
 
-<p><span class="style11">&bull; Essentials of Modern Cloud Computing (Graduate Level, National College of Elite Engineering, with Prof. Chunming Hu and co), Spring 2024/2025 </span></p>
-<p><span class="style11">&bull; Foudations of Cloud Computing (Undergraduate Level, BeihangU), Spring 2024/2025 </span></p>
-<p><span class="style11">&bull; Foudations of Software Engineering (Undergraduate Level, BeihangU), Spring 2024/2025 </span></p>
-<p><span class="style11">&bull; Research Methodology and Training (Undergraduate Level, BeihangU), Autumn 2023/2024 </span></p>
-<p><span class="style11">&bull; Services Computing (Graduate Level, BeihangU), <a href="http://www.xuwang.tech/course/sc2023fall/main.html">Autumn 2023</a>, Autumn 2024</span></p> 
+<p><span class="style11">&bull; Essentials of Modern Cloud Computing (Graduate Level, National College of Elite Engineering, with Prof. Chunming Hu and co), Spring 2024-now </span></p>
+<p><span class="style11">&bull; Foudations of Cloud Computing (Undergraduate Level, BeihangU), Spring 2024-now </span></p>
+<p><span class="style11">&bull; Foudations of Software Engineering (Undergraduate Level, BeihangU), Spring 2024-now </span></p>
+<p><span class="style11">&bull; Research Methodology and Training (Undergraduate Level, BeihangU), Autumn 2023-2025 </span></p>
+<p><span class="style11">&bull; Services Computing (Graduate Level, BeihangU), Autumn 2023-now </span></p> 
 <p><span class="style11">&bull; Operating Systems (XJCO2211, Undergraduate Level, UoLeeds, with Prof. Jie Xu), Autumn 2020-2022 </span></p> 
 <p><span class="style11">&bull; Essentials of Cloud Computing (CS61839, Graduate Level, BeihangU, with Prof. Chunming Hu), Spring 2017</span></p> 
 <p><span class="style11">&bull; Talks given in different venues such as academic conferences or industrial meeting-ups can be found here: <a href="presentations.html" style="text-decoration: none">~$ talks</a> </span></p>
@@ -484,7 +484,8 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Associate Editor of ACM Computing Surveys (CSUR) </span></p>
 <p><span class="style11">&bull; Associate Editor of CCF Computer Engineering and Design Journal </span></p>
-<p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCI-indexed)</span></p>
+<p><span class="style11">&bull; Editorial Board Member of Journal of Big Data and Cognitive Computing (BDCC) (JCR-Q1) </span></p>
+<p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI.pdf" style="text-decoration: none">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), (SCIE-indexed)</span></p>
 <p><span class="style11">&bull; Guest Editor: <a href="call4papers/Electronics-SI.pdf" style="text-decoration: none">"Machine Intelligent Information and Efficient Systems"</a> Special Issue in the journal of Electronics (SCI-indexed, IF=2.690) </span></p>
 <p><span class="style11">&bull; Review Editor@Editorial Board: Frontiers in Big Data, Frontiers in High Performance Computing  </span></p>
 
@@ -551,7 +552,7 @@ I had the opportunity to work closely with many institutes around the world and 
 </center>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">Updated by Oct. 2025</span></p>
+<p><span class="style11">Updated by Dec. 2025</span></p>
 <p><span class="style11"><img src="icons/yin.gif" width="50" alt="Renyu" border="0" title="Renyu Yang" />&nbsp;&nbsp;<img src="images/QRcode.png" width="50" alt="QRCode" border="0" title="Beihang Homepage" /></span></p>
 
  
